--- a/index.html
+++ b/index.html
@@ -16,51 +16,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello!</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
   </head>
-  <body class="">
-    <div class="container py-4">
-      <div class="">
-        <div class="">
+  <body class="text-start row container-fluid row-cols-2 row-cols-md-4 g-4">
+    <div class="container py-4 container text-center">
+      <div class="col">
+        <div class="card">
           <img
             src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
-            class=""
+            class="rounded mx-auto d-block"
             style="width: 80px; height: 80px"
             alt="Avatar"
           />
           <h5 class=""><strong>John Doe</strong></h5>
-          <button type="button" class="">Contact</button>
+          <button type="button" class="btn btn-success">Contact</button>
         </div>
-        <div class="">
+
+        <div class="card text-start">
           <strong>My Progress</strong>
-          <ul class="">
+          <ul class="text-end">
             <li class="">
-              <div class="">
+              <div class="text-start">
                 <img
                   src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
                   alt=""
                   style="width: 45px; height: 45px"
                   class=""
                 />
-                <div class="">
-                  <p class="">Django</p>
-                  <div class="">
+                <div class="col">
+                  <p class="fw-bold">Django</p>
+                  <div class="progress">
                     <div
-                      class=""
+                      class="progress-bar bg-success"
                       role="progressbar"
                       style="width: 80%"
-                      aria-valuenow="50"
+                      aria-valuenow="8"
                       aria-valuemin="0"
-                      aria-valuemax="100"
+                      aria-valuemax="8"
                     ></div>
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
+              <span class="badge bg-success rounded-pill">&rarr;</span>
             </li>
           </ul>
-          <ul class="">
+          <ul class="text-end">
             <li class="">
-              <div class="">
+              <div class="text-start">
                 <img
                   src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
                   alt=""
@@ -68,10 +75,10 @@
                   class=""
                 />
                 <div class="">
-                  <p class="">Flutter</p>
-                  <div class="">
+                  <p class="fw-bold">Flutter</p>
+                  <div class="progress">
                     <div
-                      class=""
+                      class="progress-bar bg-info"
                       role="progressbar"
                       style="width: 30%"
                       aria-valuenow="50"
@@ -81,7 +88,33 @@
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
+              <span class="badge bg-info rounded-pill">&rarr;</span>
+            </li>
+          </ul>
+          <ul class="text-end">
+            <li class="">
+              <div class="text-start">
+                <img
+                  src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
+                  alt=""
+                  style="width: 45px; height: 45px"
+                  class=""
+                />
+                <div class="">
+                  <p class="fw-bold">Html</p>
+                  <div class="progress">
+                    <div
+                      class="progress-bar bg-danger"
+                      role="progressbar"
+                      style="width: 80%"
+                      aria-valuenow="50"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <span class="badge bg-danger rounded-pill">&rarr;</span>
             </li>
           </ul>
           <ul class="">
@@ -94,133 +127,128 @@
                   class=""
                 />
                 <div class="">
-                  <p class="">Html</p>
-                  <div class="">
+                  <p class="fw-bold">CSS</p>
+                  <div class="progress">
                     <div
-                      class=""
+                      class="progress-bar"
                       role="progressbar"
                       style="width: 80%"
-                      aria-valuenow="50"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
+                      aria-valuenow="10"
+                      aria-valuemin="10"
+                      aria-valuemax="10"
                     ></div>
                   </div>
                 </div>
               </div>
-              <span class="">&rarr;</span>
-            </li>
-          </ul>
-          <ul class="">
-            <li class="">
-              <div class="">
-                <img
-                  src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
-                  alt=""
-                  style="width: 45px; height: 45px"
-                  class=""
-                />
-                <div class="">
-                  <p class="">CSS</p>
-                  <div class="">
-                    <div
-                      class=""
-                      role="progressbar"
-                      style="width: 80%"
-                      aria-valuenow="50"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                    ></div>
-                  </div>
-                </div>
+              <div class="text-end">
+                <span class="badge bg-primary rounded-pill text-end"
+                  >&rarr;</span
+                >
               </div>
-              <span class="">&rarr;</span>
             </li>
           </ul>
         </div>
-        <div class="">
+        <div class="card container mt-3 text-start">
           <strong>Reach me</strong>
           <form>
-            <div class="">
-              <label for="exampleInputEmail1" class="">Email address</label>
+            <div class="mb-3 mt-3">
+              <label for="exampleInputEmail1" class="form-label"
+                >Email address</label
+              >
               <input
                 type="email"
-                class=""
+                class="form-control"
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
               />
-              <div id="emailHelp" class="">
+              <div id="emailHelp" class="form-control-plaintext fw-light">
                 We'll never share your email with anyone else.
               </div>
             </div>
             <div class="">
               <label for="Subject" class="">Subject</label>
-              <textarea class="" id="Subject" rows="3"></textarea>
+              <textarea class="form-control" id="Subject" rows="3"></textarea>
             </div>
             <div class="">
               <label for="Country" class="">Country</label>
-              <select class="">
+              <select class="form-select">
                 <option selected>Open this select menu</option>
                 <option value="1">Kuwait</option>
                 <option value="2">Other</option>
               </select>
             </div>
             <div class="">
-              <input type="checkbox" class="" id="exampleCheck1" />
-              <label class="" for="exampleCheck1"
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+              <label class="form-check-label" for="exampleCheck1"
                 >This is a business email</label
               >
             </div>
-            <button type="submit" class="">Submit</button>
+            <button type="submit" class="btn btn-success">Submit</button>
           </form>
         </div>
-        <div class="">
+        <div class="card text-start">
           <strong>My Blog</strong>
-          <div class="" style="height: auto; min-height: 450px">
+          <div class="text-start" style="height: auto; min-height: 450px">
             <ol class="">
-              <li class="">
-                <div class="">
-                  <div class="">Article 1</div>
+              <li class="text-end">
+                <div class="text-start">
+                  <div class="fw-bold">Article 1</div>
                   Lorem
                 </div>
-                <span class="">10 mins read</span>
+                <span class="badge rounded-pill text-bg-success"
+                  >10 mins read</span
+                >
               </li>
-              <li class="">
-                <div class="">
-                  <div class="">Article 2</div>
+              <li class="text-end">
+                <div class="text-start">
+                  <div class="fw-bold">Article 2</div>
                   Lorem
                 </div>
-                <span class="">15 mins read</span>
+                <span class="badge rounded-pill text-bg-success"
+                  >15 mins read</span
+                >
               </li>
-              <li class="">
-                <div class="">
-                  <div class="">Article 3</div>
+              <li class="text-end">
+                <div class="text-start">
+                  <div class="fw-bold">Article 3</div>
                   Lorem
                 </div>
-                <span class="">7 mins read</span>
+                <span class="badge rounded-pill text-bg-success text-end"
+                  >7 mins read</span
+                >
               </li>
             </ol>
-            <ul class="">
-              <li class="">
-                <a class="" href="#" tabindex="-1" aria-disabled="true"
+            <ul class="pagination justify-content-center">
+              <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1" aria-disabled="true"
                   >Previous</a
                 >
               </li>
-              <li class="">
-                <a class="" href="#">1</a>
+              <li class="page-item">
+                <a class="page-link" href="#">1</a>
               </li>
-              <li class="">
-                <a class="" href="#">2</a>
+              <li class="page-item">
+                <a class="page-link" href="#">2</a>
               </li>
-              <li class="">
-                <a class="" href="#">3</a>
+              <li class="page-item">
+                <a class="page-link" href="#">3</a>
               </li>
-              <li class="">
-                <a class="" href="#">Next</a>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
