--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="text-start row container-fluid row-cols-2 row-cols-md-4 g-4">
-    <div class="container py-4 container text-center">
-      <div class="col">
-        <div class="card">
+  <body class="text-start row bg-light">
+    <div class="container">
+      <div class="row gap-2 justify-content-center">
+        <div
+          class="card col-md-5 col-sm-12 p-3 d-flex justify-content-center align-items-center"
+        >
           <img
             src="https://thumbs.dreamstime.com/b/no-thumbnail-image-placeholder-forums-blogs-websites-148010362.jpg"
-            class="rounded mx-auto d-block"
+            class="rounded-circle"
             style="width: 80px; height: 80px"
             alt="Avatar"
           />
@@ -37,7 +39,7 @@
           <button type="button" class="btn btn-success">Contact</button>
         </div>
 
-        <div class="card text-start">
+        <div class="card col-md-5 col-sm-12 p-4 text-start">
           <strong>My Progress</strong>
           <ul class="text-end">
             <li class="">
@@ -148,7 +150,7 @@
             </li>
           </ul>
         </div>
-        <div class="card container mt-3 text-start">
+        <div class="card col-md-5 col-sm-12 p-4 text-start">
           <strong>Reach me</strong>
           <form>
             <div class="mb-3 mt-3">
@@ -190,7 +192,7 @@
             <button type="submit" class="btn btn-success">Submit</button>
           </form>
         </div>
-        <div class="card text-start">
+        <div class="card col-md-5 col-sm-12 p-4 text-start">
           <strong>My Blog</strong>
           <div class="text-start" style="height: auto; min-height: 450px">
             <ol class="">
